Add github pages url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8" />
         <meta property="og:title" content="alice." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="idfk" />
+        <meta property="og:url" content="https://quantum-cucumber.github.io/website/" />
         <meta name="theme-color" content="#b52b65">
     </head>
     <body>
