--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <body>
         <div id="content">
             <h1 id="title-box">
-                <span id="aaa"><span id="aaa-scroll">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span></span>lice
+                <span id="aaa">
+                    <span id="aaa-scroll">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
+                    <div id="aaa-gradient"></div>
+                </span>
+                <span id="lice">lice</span>
+                <div id="flex-spacer"></div>
             </h1>
             
             <p>I like girls and computers</p>
