--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>alice.</title>
         <link rel="stylesheet" href="index.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
         <meta charset="utf-8" />
         <meta property="og:title" content="alice." />
