--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://webring.queercoded.dev/prev?source=quantum-cucumber.github.io">
                     <img src="media/button-prev.png" alt="Rainbow left facing arrow" title="Previous in webring" />
                 </a>
-                <img src="media/88x31.gif" alt="88x31 Queer Coded webring badge" />
+                <img src="media/88x31.gif" alt="88x31 Queer Coded webring badge" title="You're telling me a queer coded this?" />
                 <a href="https://webring.queercoded.dev/next?source=quantum-cucumber.github.io">
                     <img src="media/button-next.png"alt="Rainbow right facing arrow" title="Next in webring" />
                 </a>
