--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta property="og:title" content="alice." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://quantum-cucumber.github.io/website/" />
+        <meta property="og:url" content="https://quantum-cucumber.github.io/me/" />
         <meta name="theme-color" content="#b52b65">
     </head>
     <body>
