--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="flex-spacer"></div>
             </h1>
             
-            <p>I like girls and computers</p>
+            <p>I like making computers do things :3</p>
             
             <a class="button" href="https://tech.lgbt/@quantumcucumber" rel="me" style="--offset: 2">
                 <div class="service">
